# rules_foreign_cc

./: .gitignore  404.html  Cargo.toml  WORKSPACE.bazel  cmake.html  configure_make.html  flatten.html  index.html  make.html  ninja.html  print.html  rules.html  searchindex.js  searchindex.json
.bazelci/: config.yaml
examples/: WORKSPACE.bazel
foreign_cc/: defs.bzl  foreign_cc.bzl  repositories.bzl  toolchains.bzl
foreign_cc/private/: cmake_script.bzl  framework.bzl
foreign_cc/private/framework/: toolchain.bzl
foreign_cc/private/framework/toolchains/: bsd_commands.bzl  mappings.bzl
toolchains/: BUILD.bazel
tools/process_wrapper/: BUILD.bazel  Cargo.toml
tools/process_wrapper/src/: build_system.rs  error.rs  lib.rs  main.rs  ninja.rs  util.rs
